# photo-org

./: .gitignore  README.md  justfile  plan.md  pyproject.toml
src/photo_org/: __init__.py  audit.py  find_albums.py  generate_map.py  organize.py
tests/: test_generate_map.py  test_organize.py
