[project]
name = "photo-org"
version = "0.1.0"
description = "Photo archive organization with hardlink-based albums"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
organize-photos = "photo_org.organize:main"
audit-albums = "photo_org.audit:main"
find-photo-albums = "photo_org.find_albums:main"
generate-album-map = "photo_org.generate_map:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_org"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
